<resources>
    <string name="app_name">HelpingHand</string>
    <string name="welcome_to_helping_hand">Welcome to Helping Hand</string>
    <string name="create_account_button_main_activity">Create Account</string>
    <string name="tell_us_about_yourself">Tell us about yourself.</string>
    <string name="createAccountEmail">Email</string>
    <string name="createAccountName">Name</string>
    <string name="phoneCreateAccount">Phone</string>
    <string name="are_you_in_need_of_assistance_or_lending_a_hand">Are you in need of assistance or lending a hand?</string>
    <string name="assistanceCreateAccount">Assistance</string>
    <string name="helpingCreateAccount">Helping</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here.</string>
    <string name="Volunteer">Volunteer</string>
    <string name="volunteerRadioButton">Volunteer</string>
    <string name="assistanceRadioAssistance">Assistance</string>
    <string name="create_account_button">Create Account</string>
    <string name="surname">Surname</string>
    <string name="createAccountPassword">Password</string>
    <string name="title_activity_get_selfie">GetSelfieActivity</string>
    <string name="take_a_picture_button_get_selfie_activity">Take a Picture</string>
    <string name="upload_button_get_selfie_activity">Upload</string>
    <string name="all_set_press_here_to_continue">All set? Press here to continue.</string>
    <string name="you_re_almost_there_we_just_need_a_selfie_of_you_so_that_your_patient_knows_what_you_look_like_please_take_a_picture_or_upload_one_if_you_d_like">You\'re almost there. We Just need a selfie of you so that your patient knows what you look like. Please Take a picture or upload one if you\'d like.</string>
    <string name="welcome_back_login_page">Welcome back.</string>
    <string name="email_text_login_activity">Email</string>
    <string name="password_text_login_activity">Password</string>
    <string name="login_button_login_activity">Login</string>
    <string name="forget_password_text_login_page">Forget password?</string>
    <string name="don_t_have_an_account_create_one_here">Don\'t have an account? Create one here.</string>
    <string name="activity_login_email_textview">Email</string>
    <string name="login_activity_password_text">Password</string>
    <string name="messages_nav_bar">Messages</string>
    <string name="profile_nav_bar">Profile</string>
    <string name="requests_nav_bar">Requests</string>
    <string name="settings_nav_bar">Settings</string>
    <string name="help_nav_bar">Help</string>
    <string name="communicate_nav_bar">Communicate</string>
    <string name="share_nav_bar">Share</string>
    <string name="textview">TextView</string>
    <string name="navigation_draw_open">Open navigation drawer</string>
    <string name="navigation_draw_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_nav">Home</string>
    <string name="title_activity_patient_map">Map</string>
    <string name="title_activity_basic_map">BasicMapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="permission_request">Permission Request</string>
    <string name="helping_hand_needs_permission_to_access_device_location_to_provide_required_services_please_allow_the_permission">Helping Hand needs permission to access device location to provide required services. Please allow the permission</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="todo">TODO</string>
    <string name="make_request">Make Request</string>
    <string name="google_maps_api">AIzaSyBb6JbacdsLAEYmr4hdttXKSKOe606dNq4</string>

    <string name="todo_image_view">TODO</string>
    <string name="todo_nav_header">TODO</string>
    <string name="helping_hand_nav_header">Helping Hand</string>
    <string name="info_helpinghand_co_za_nav_header">info@HelpingHand.co.za</string>
    <string name="todo_activity_patient_home_page">TODO</string>
    <string name="dashboard_patient_home_page">Dashboard</string>
    <string name="items_patient_home_page">Items</string>
    <string name="favourites_home_page_icon">Favourites</string>
    <string name="location_update">Location Update</string>
    <string name="messages_home_icon">Messages</string>
    <string name="new_request_home_icon">New Request</string>
    <string name="settings_home_icon">Settings</string>
    <string name="favourites_home_icon">Favourites</string>
    <string name="logout_home_page">Logout</string>
    <string name="home_page_personal_details">Personal Details</string>
    <string name="personal_icon_home_page">Personal Icon</string>
    <string name="new_request_image_home_page">New Request image</string>
    <string name="location_update_image">Location Update Image</string>
    <string name="messages_image">Messages Image</string>
    <string name="personal_details_image">Personal Details Image</string>
    <string name="settings_image">Settings Image</string>
    <string name="settings_image1">Settings Image</string>
    <string name="new_requests_home_page">New Requests</string>
    <string name="title_activity_maps_current_place">Map</string>
    <string name="who_do_you_want_to_help_today">Who do you want to help today?</string>
    <string name="option_get_place">Option get place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>
    <string name="set_location_button">Set Location</string>
    <string name="tap_here_to_send_a_message_nto_your_volunteer">Tap here to send a message \nto your volunteer</string>
    <string name="proceed_to_delivery">Proceed to Delivery</string>
    <string name="volunteer_to_messages_button">Messages</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_volunteer_settings">VolunteerSettingsActivity</string>

    <!-- Preference Titles -->
    <string name="sync_pref">Sync</string>
    <string name="sync_pref_summary">
        Get your photos, videos, contacts, subscriptions etc on all your devices.
    </string>

    <string name="pref_syncConnectionType">Sync Connection Type</string>
    <string name="pref_syncConnectionType_dialog_title">Perform Sync Using</string>
    <string name="pref_syncConnectionType_default_value">WiFi</string>
    <string name="pref_syncConnectionType_summary">Wifi</string>
    <string name="personal_details_header">Personal Details</string>
    <string name="tap_on_relevant_card_to_update_details">Tap on relevant card to update details.</string>
    <string name="accept_orders_volunteers">Accept Orders</string>
    <string name="welcome_message_volunteer_home_page">Welcome</string>
    <string name="PD_password">Password</string>
    <string name="send_message_btn">Send</string>
    <string name="name_of_contact">Name</string>
    <string name="type_a_message">Type a message</string>
    <string name="your_order_is_being_processed">Your order is being processed.</string>

    <string-array name="pref_syncConnectionType_entries">
        <item>WiFi</item>
        <item>Mobile Data</item>
        <item>Wifi/Mobile Data</item>
    </string-array>

    <string-array name="pref_syncConnectionType_values">
        <item>WiFi</item>
        <item>Mobile Data</item>
        <item>Wifi/Mobile Data</item>
    </string-array>

</resources>
