<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".CreateAccount">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text= "@string/tell_us_about_yourself"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/createAccountNameTextId"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/createAccountName"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/createAccountSurnameTextId"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/createAccountEmailTextId"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/createAccountEmail"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/createAccountPhoneId"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/phoneCreateAccount"
            android:inputType="phone"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/createAccountPassword"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/createAccountPassword"
            android:inputType="textPassword"
            android:textAlignment="center" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/are_you_in_need_of_assistance_or_lending_a_hand"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="250dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <RadioButton
                android:id="@+id/volunteerRadioButtonId"
                android:layout_width="137dp"
                android:layout_height="43dp"
                android:checked="true"
                android:text="@string/volunteerRadioButton"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/patientRadioButtonId"
                android:layout_width="137dp"
                android:layout_height="47dp"
                android:text="@string/assistanceRadioAssistance"
                android:textStyle="bold" />

        </RadioGroup>

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:onClick="doCreateAccount"
            android:text="@string/create_account_button" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/already_have_an_account_login_here"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="doLoginIntent"
        android:padding="20dp"
        />


</RelativeLayout>