<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessagingActivity">

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/send_message_btn"
       android:textSize="20sp"
       android:textColor="@color/colorPrimary"
       android:id="@+id/btnSend"
       android:layout_alignParentBottom="true"
       android:layout_alignParentEnd="true"
       android:onClick="onSend"
       android:layout_margin="8dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_a_message"
        android:id="@+id/messageBox"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/btnSend"
        android:inputType="text" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/messageList"
        android:dividerHeight="0dp"
        android:divider="@null"
        android:layout_above="@id/messageBox"
        android:layout_below="@id/clientName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_of_contact"
        android:textSize="25sp"
        android:padding="5dp"
        android:background="@drawable/gradient"
        android:textColor="@color/white"
        android:id="@+id/clientName"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal" />


</RelativeLayout>