<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_theme_background_colour"
    tools:context=".PatientProcessOrder">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:paddingTop="10dp"
        android:text="Your Order is being processed." />

    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        android:id="@+id/MessagesCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="12dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/quantum_grey200"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:contentDescription="@string/messages_image"
                android:src="@drawable/ic_home_messages_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/messages_home_icon"
                android:textColor="#5C5C5C"
                android:textSize="18sp"
                android:paddingBottom="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tap_here_to_send_a_message_nto_your_volunteer"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>